# VascuTrace_AI

./: .gitignore  README.md  app.py  pyproject.toml
configs/: train_siamese_b3_softdml.yaml  train_siamese_p3_A.yaml  train_siamese_p3_B.yaml  train_siamese_p3_C.yaml  train_siamese_p4b1_aug.yaml  train_siamese_p4b1_fair.yaml  train_siamese_p4b1_fair_seed2.yaml  train_siamese_p4b1c_scale15.yaml  train_siamese_p4b2_deepsup.yaml  train_siamese_p4b2_deepsup_seed2.yaml  train_siamese_p4l3_dice.yaml  train_siamese_p4l3b_0p6_0p4.yaml  train_siamese_v1.yaml  train_siamese_v2.yaml  train_siamese_v3.yaml  train_siamese_v4_big.yaml  train_siamese_v5exp.yaml  train_siamese_v6exp.yaml  train_siamese_v7b.yaml  train_siamese_v7b_seed2.yaml  train_siamese_v7soft.yaml
dashboard/: __init__.py  components.py  theme.py
docs/: CODEX_COLLABORATION.md  HACKATHON_SUBMISSION.md
knowledge/: research_corpus.json
plans/: VascuTrace_Publication_and_Reproducibility_Plan_2026-07-20.md
scripts/: __init__.py  b2_ensemble_eval.py  b3_grad_balance_probe.py  build_rag_index.py  eda_quadra.py  fp_cnr_gate_probe.py  fp_component_autopsy.py  p3_lambda_probe.py  rag_eval.py  run_complete_case.py  run_p2_pipeline.py  run_product_evaluation.py
tests/: conftest.py  test_baselines.py  test_codex_session_evidence.py  test_contracts_and_verifier.py  test_data_pipeline.py  test_evaluation.py  test_evidence.py  test_experiments_and_pipeline.py  test_first_checkpoint.py  test_genai_layer.py  test_geometry.py  test_mcp_server.py  test_ml_aug_b1_invariants.py  test_ml_b3_soft_term.py  test_ml_boundary_aux.py  test_ml_configs.py  test_ml_dataset.py  test_ml_deep_supervision.py  test_ml_evaluate.py  test_ml_infer.py  test_ml_metrics.py  test_ml_model.py  test_ml_train.py  test_ml_tversky_rebalance.py  test_product_backends.py  (+4 more)
(+49 files in other folders)
