[project]
name = "vascutrace-ai"
version = "0.1.0"
description = "VascuTrace_AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.14",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
exclude = [".claude", "claude-harness", ".venv"]
