[project]
name = "vascutrace-ai"
version = "0.1.0"
description = "VascuTrace_AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.28.1",
    "matplotlib>=3.11.0",
    "monai==1.5.1",
    "nibabel>=5.4.2",
    "numpy>=2.5.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "pyarrow>=25.0.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "simpleitk>=2.5.5",
    "statsmodels>=0.14.6",
    "torch==2.9.1",
    "tqdm>=4.68.4",
    "streamlit>=1.48.0",
    "openai>=2.46.0",
    "sentence-transformers>=5.6.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.156.6",
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.14",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "local_data: test requires local Data/ access (excluded from CPU/offline CI)",
    "gpu: test requires a CUDA GPU (excluded from CPU/offline CI)",
]

[tool.ruff]
target-version = "py313"
exclude = [".venv"]
